@@ -1,3 +1,11 @@
+2019-06-05  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2019-05-29  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/90598
+	* g++.dg/cpp0x/pr90598.C: New test.
+
 2019-05-30  Iain Sandoe  <iain@sandoe.co.uk>
 
 	Backport from mainline.
